The server crashes when trying to join collections ($ lookup with pipeline).

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Critical - P2
    • 3.6.15, 4.0.13, 4.2.1, 4.3.1
    • Affects Version/s: 3.6.14, 4.0.12, 4.2.0
    • Component/s: Usability
    • None
    • Fully Compatible
    • ALL
    • v4.2, v4.0, v3.6
    • Query 2019-10-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      CVE-2019-2393

      Title: Crash while joining collections with $lookup

      Description:
      A user authorized to perform database queries may trigger denial of service by issuing specially crafted queries, which use $lookup and collations. This issue affects: MongoDB Inc. MongoDB Server v4.2 versions prior to 4.2.1; v4.0 versions prior to 4.0.13; v3.6 versions prior to 3.6.15.

      CVSS score:
      This issue's CVSS:3.1 severity is scored at 6.5 using the following scoring metrics:
      CVSS:3.1/AV:N/AC:L/PR:L/UI:N/S:U/C:N/I:N/A:H

      Affected versions:
      MongoDB Inc. MongoDB Server v4.2 versions prior to 4.2.1; v4.0 versions prior to 4.0.13; v3.6 versions prior to 3.6.15.

      CWE: CWE-416: Use After Free

        1. col info.txt
          2 kB
        2. mongod.log
          758 kB

            Assignee:
            Bernard Gorman
            Reporter:
            Alexey Glukhov
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: