SERVER-43350 $lookup with no local default or user-specified collation should explicitly set the simple collation on the foreign expression context